[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39.0", features = ["full"] }
warp = "0.3.3"
serde = { version = "1.0.210", features = ["derive"] }
